@@ -1,3 +1,8 @@
+2006-06-28  Sven Panne  <sven.panne@aedion.de>
+
+	* src/alc/alc_device.c, src/backends/alc_backend_alsa.c: Improved debug
+	output a bit.
+
 2006-06-27  Sven Panne  <sven.panne@aedion.de>
 
 	* src/backends/alc_backend_alsa.c: Renamed structure holding ALSA data
